https://github.com/OpenPaaS-Suite/esn-frontend-calendar/issues/54: Adjusted .fc-title and .fc-time styles to make consecutive events align better

--- a/src/frontend/components/material-admin/less/inc/vendor-overrides/fullcalendar.less
+++ b/src/frontend/components/material-admin/less/inc/vendor-overrides/fullcalendar.less
@@ -184,7 +184,7 @@
     border: 0;
 
     .fc-title {
-		padding: 2px 8px;
+		padding: 2px 6px;
 		display: block;
     }
 
@@ -192,7 +192,6 @@
 		float: left;
 		background: rgba(0, 0, 0, 0.2);
 		padding: 2px 6px;
-		margin: 0 0 0 -1px;
     }
 }
 
